kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/valid/Class_new.kmt
/* $Id: Class_new.kmt,v 1.2 2007-10-16 11:49:10 ftanguy Exp $ */

// Class.new operation

package tctest; 

require kermeta

class A {}

class B inherits A{}

class Test {

	operation test1() : Void is do
		A.new
	end
	
	operation test2() : Void is do
		var a : A
		a := B.new
	end
	
	operation test3() : Void is do
		var a : A
		a := A.new
	end
	
	operation test4() : Void is do
		var a : A
		var b : B
		a := B.new
		b ?= a
	end

}

/* END OF FILE */